1. isAdmin field is added into user table 2. AuthGuard is reimplemented from class to function 3. two additional fields in .env file are added

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,5 @@
 ENV="local"
 DATABASE_URL="postgresql://admin:admin@localhost:5432/main?schema=public"
 JWT_KEY="any-secret"
+JWT_ACCESS_EXPIRES_IN="100m"
+JWT_REFRESH_EXPIRES_IN="1d"
