feat(storage): google storage

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,5 @@ DATABASE_URL="postgresql://admin:admin@localhost:5432/main?schema=public"
 JWT_KEY="any-secret"
 JWT_ACCESS_EXPIRES_IN="100m"
 JWT_REFRESH_EXPIRES_IN="1d"
+GOOGLE_PROJECT_ID="test-function-466919"
+GOOGLE_BUCKET_NAME="scooter-bucket"
