feat(storage): env example

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,4 @@ JWT_ACCESS_EXPIRES_IN="100m"
 JWT_REFRESH_EXPIRES_IN="1d"
 GOOGLE_PROJECT_ID="test-function-466919"
 GOOGLE_BUCKET_NAME="scooter-bucket"
+ENCRYPT_SECRET_KEY="12345678901234567890123456789012"
