source updated. VK_APP_SECRET is required to go further

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,8 @@ JWT_REFRESH_EXPIRES_IN="1d"
 GOOGLE_PROJECT_ID="test-function-466919"
 GOOGLE_BUCKET_NAME="scooter-bucket"
 ENCRYPT_SECRET_KEY="12345678901234567890123456789012"
+
+VK_APP_ID='54161850'
+VK_APP_SECRET='VK_APP_SECRET'
+
+# ngrok http --url=moanful-pentavalent-le.ngrok-free.app 8080
