feat(emails): register emails

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ JWT_REFRESH_EXPIRES_IN="1d"
 GOOGLE_PROJECT_ID="test-function-466919"
 GOOGLE_BUCKET_NAME="scooter-bucket"
 ENCRYPT_SECRET_KEY="12345678901234567890123456789012"
+LOOPS_API_KEY="a166f322020cd63bc9530d97b94f2b8e"
