--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "bullmq": "^5.58.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "loops": "^6.0.0",
     "multer": "^2.0.2",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
