--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/terminus": "^11.0.0",
     "@prisma/client": "^6.13.0",
+    "@redis/client": "^5.8.3",
     "@types/multer": "^2.0.0",
     "axios": "^1.11.0",
     "bcrypt": "^6.0.0",
