--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/terminus": "^11.0.0",
+    "@nestjs/throttler": "^6.4.0",
     "@prisma/client": "^6.13.0",
     "@redis/client": "^5.8.3",
     "@types/multer": "^2.0.0",
